cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled main.cpp)

add_executable(main main.cpp)
add_executable(HelloWorld 01/1/HelloWorld.cpp)
add_executable(SimpleAdder 01/1/SimpleAdder.cpp)
add_executable(BetweenAdder 01/1/BetweenAdder.cpp)
add_executable(StringIO 01/1/StringIO.cpp)
add_executable(q1 01/1/q1.cpp)
add_executable(q2 01/1/q2.cpp)
add_executable(q3 01/1/q3.cpp)
add_executable(q4 01/1/q4.cpp)
add_executable(FunctionOverloading 01/2/FunctionOverloading.cpp)
add_executable(Question 01/2/Question.cpp)
add_executable(DefaultValue1 01/3/DefaultValue1.cpp)
add_executable(DefaultAdder2 01/3/DefaultAdder2.cpp)
add_executable(DefaultValue3 01/3/DefaultValue3.cpp)
add_executable(Q1 01/3/Q1.cpp)
add_executable(InlineFunc 01/4/InlineFunc.cpp)
add_executable(Example 01/4/Example.cpp)
add_executable(NameSp1 01/5/NameSp1.cpp)
add_executable(NameSp2 01/5/NameSp2.cpp)
add_executable(NameSp3 01/5/NameSp3.cpp)
add_executable(NameSp4 01/5/NameSp4.cpp)

add_executable(SimpleMain 01/5/01-4/SimpleMain.cpp 01/5/01-4/SimpleFunc.h 01/5/01-4/SimpleFunc.cpp)

add_executable(TrueAndFalse 02/2/TrueAndFalse.cpp)
add_executable(DataTypeBool 02/2/DataTypeBool.cpp)
add_executable(Referen 02/2/Referen.cpp)
add_executable(RefArrElem 02/2/RefArrElem.cpp)
add_executable(RefPtr 02/2/RefPtr.cpp)
add_executable(RefSwap 02/2/RefSwap.cpp)
add_executable(02-1-1 02/2/02-1-1.cpp)
add_executable(02-1-3 02/2/02-1-3.cpp)
add_executable(RefReturnOne 02/2/RefReturnOne.cpp)