cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_C_FLAGS "-fexec-charset=CP949")

add_executable(untitled main.cpp)

add_executable(main main.cpp)
add_executable(HelloWorld 01/1/HelloWorld.cpp)
add_executable(SimpleAdder 01/1/SimpleAdder.cpp)
add_executable(BetweenAdder 01/1/BetweenAdder.cpp)
add_executable(StringIO 01/1/StringIO.cpp)
add_executable(q1 01/1/q1.cpp)
add_executable(q2 01/1/q2.cpp)
add_executable(q3 01/1/q3.cpp)
add_executable(q4 01/1/q4.cpp)
add_executable(FunctionOverloading 01/2/FunctionOverloading.cpp)
add_executable(Question 01/2/Question.cpp)
add_executable(DefaultValue1 01/3/DefaultValue1.cpp)
add_executable(DefaultAdder2 01/3/DefaultAdder2.cpp)
add_executable(DefaultValue3 01/3/DefaultValue3.cpp)
add_executable(Q1 01/3/Q1.cpp)
add_executable(InlineFunc 01/4/InlineFunc.cpp)
add_executable(Example 01/4/Example.cpp)
add_executable(NameSp1 01/5/NameSp1.cpp)
add_executable(NameSp2 01/5/NameSp2.cpp)
add_executable(NameSp3 01/5/NameSp3.cpp)
add_executable(NameSp4 01/5/NameSp4.cpp)

add_executable(SimpleMain 01/5/01-4/SimpleMain.cpp 01/5/01-4/SimpleFunc.h 01/5/01-4/SimpleFunc.cpp)

add_executable(TrueAndFalse 02/2/TrueAndFalse.cpp)
add_executable(DataTypeBool 02/2/DataTypeBool.cpp)
add_executable(Referen 02/2/Referen.cpp)
add_executable(RefArrElem 02/2/RefArrElem.cpp)
add_executable(RefPtr 02/2/RefPtr.cpp)
add_executable(RefSwap 02/2/RefSwap.cpp)
add_executable(02-1-1 02/2/02-1-1.cpp)
add_executable(02-1-3 02/2/02-1-3.cpp)
add_executable(RefReturnOne 02/2/RefReturnOne.cpp)
add_executable(RefReturnTwo 02/2/RefReturnTwo.cpp)
add_executable(RefReturnThree 02/2/RefReturnThree.cpp)
add_executable(02-2 02/2/02-2.cpp)
add_executable(MemMalFree 02/2/MemMalFree.cpp)
add_executable(NewDelete 02/2/NewDelete.cpp)
add_executable(NewObject 02/2/NewObject.cpp)
add_executable(02-2-3 02/2/02-2-3.cpp)
add_executable(StdCPPFunc 02/2/StdCPPFunc.cpp)
add_executable(02-4-1 02/2/02-4-1.cpp)
add_executable(02-4-2 02/2/02-4-2.cpp)
add_executable(RacingCar 03/1/RacingCar.cpp)
add_executable(RacingCarFuncAdd 03/1/RacingCarFuncAdd.cpp)
add_executable(03-1 03/1/03-1.cpp)
add_executable(RacingCarEnum 03/1/RacingCarEnum.cpp)
add_executable(RacingCarOuterFunc 03/1/RacingCarOuterFunc.cpp)
add_executable(RacingCarClassBase 03/2/RacingCarClassBase.cpp)
add_executable(Car 03/2/Car.cpp 03/2/Car.h 03/2/RacingMain.cpp)
add_executable(CarInline 03/2/CarInline.cpp 03/2/CarInline.h 03/2/RacingInlineMain.cpp)

add_executable(03-2-1 03/2/03-2-1.cpp)
add_executable(03-2-2 03/2/03-2-2.cpp)
add_executable(FruitSaleSim1 03/3/FruitSaleSim1.cpp)
add_executable(RectangleFault 04/1/RectangleFault.cpp)
add_executable(Point 04/1/Point.cpp 04/1/Point.h 04/1/Rectangle.cpp 04/1/RectangleFaultFind.cpp)

add_executable(04-1 04/1/04-1.cpp)
add_executable(Encaps1 04/2/Encaps1.cpp)
add_executable(Encaps2 04/2/Encaps2.cpp)
add_executable(04-2 04/2/04-2.cpp)
add_executable(Constructor1 04/3/Constructor1.cpp)
add_executable(Constructor2 04/3/Constructor2.cpp)
add_executable(FruitSaleSim2 04/3/FruitSaleSim2.cpp)
add_executable(PointRemake 04/3/Point.cpp 04/3/Point.h 04/3/Rectangle.cpp 04/3/Rectangle.h 04/3/RectangleConstructor.cpp)

add_executable(FruitSalesSim3 04/3/FruitSalesSim3.cpp)
add_executable(ReferenceMember 04/3/ReferenceMember.cpp)
add_executable(Destructor 04/3/Destructor.cpp)
add_executable(04-3-1 04/3/04-3-1.cpp)
add_executable(04-3-2 04/3/04-3-2.cpp)
add_executable(ObjArr 04/4/ObjArr.cpp)
add_executable(ObjPtrArr 04/4/ObjPtrArr.cpp)
add_executable(PointerThis 04/4/PointerThis.cpp)
add_executable(UsefulThisPtr 04/4/UsefulThisPtr.cpp)
add_executable(SelfRef 04/4/SelfRef.cpp)
add_executable(BankingSystemVer02 04/5/BankingSystemVer02.cpp)
add_executable(ClassInit 05/1/ClassInit.cpp)
add_executable(ShallowCopyError 05/2/ShallowCopyError.cpp)
add_executable(05-1 05/2/05-1.cpp)
add_executable(PassObjCopycon 05/3/PassObjCopycon.cpp)
add_executable(ReturnObjCopycon 05/3/ReturnObjCopycon.cpp)
add_executable(IKnowTempObj 05/3/IKnowTempObj.cpp)
add_executable(ReturnObjDeadTime 05/3/ReturnObjDeadTime.cpp)
add_executable(BankingSystemVer03 05/3/BankingSystemVer03.cpp)
add_executable(ConstObject 06/1/ConstObject.cpp)
add_executable(ConstOverloading 06/1/ConstOverloading.cpp)
add_executable(MyFriendClass 06/2/MyFriendClass.cpp)
add_executable(MyFriendFunction 06/2/MyFriendFunction.cpp)
add_executable(CComStatic 06/3/CComStatic.cpp)
add_executable(NeedGlobal 06/3/NeedGlobal.cpp)
add_executable(StaticMember 06/3/StaticMember.cpp)
add_executable(PublicStaticMember 06/3/PublicStaticMember.cpp)
add_executable(ConstStaticMember 06/3/ConstStaticMember.cpp)
add_executable(Mutable 06/3/Mutable.cpp)
add_executable(BankingSystemVer04 06/4/BankingSystemVer04.cpp)
add_executable(EmployeeManager1 07/1/EmployeeManager1.cpp)
add_executable(UnivStudentInheri 07/2/UnivStudentInheri.cpp)
add_executable(DerivCreOrder 07/2/DerivCreOrder.cpp)
add_executable(DerivDestOrder 07/2/DerivDestOrder.cpp)
add_executable(DestModel 07/2/DestModel.cpp)
add_executable(07-1-1 07/2/07-1-1.cpp)
add_executable(07-1-2 07/2/07-1-2.cpp)
add_executable(ProtectedHeri 07/3/ProtectedHeri.cpp)
add_executable(ISAInheritance 07/4/ISAInheritance.cpp)
add_executable(HASInheritance 07/4/HASInheritance.cpp)
add_executable(HASComposite 07/4/HASComposite.cpp)
add_executable(07-2-1 07/4/07-2-1.cpp)
add_executable(07-2-2 07/4/07-2-2.cpp)
add_executable(BankingSystemVer05 07/5/BankingSystemVer05.cpp)
add_executable(ObjectPointer 08/1/ObjectPointer.cpp)
add_executable(EmployeeManager2 08/1/EmployeeManager2.cpp)
add_executable(FunctionOverride 08/2/FunctionOverride.cpp)
add_executable(FunctionVirtualOverride 08/2/FunctionVirtualOverride.cpp)
add_executable(EmployeeManager4 08/2/EmployeeManager4.cpp)
add_executable(08-1 08/2/08-1.cpp)
add_executable(VirualDestructor 08/3/VirualDestructor.cpp)
add_executable(ReferenceAttribute 08/3/ReferenceAttribute.cpp)
add_executable(BankingSystemVer06 08/4/BankingSystemVer06.cpp)
add_executable(RealObjUnder1 09/1/RealObjUnder1.cpp)
add_executable(RealObjUnder2 09/1/RealObjUnder2.cpp)
add_executable(VirtualInternal 09/1/VirtualInternal.cpp)
add_executable(MultiInheri1 09/2/MultiInheri1.cpp)
add_executable(MultiInheri2 09/2/MultiInheri2.cpp)
add_executable(MultiInheri3 09/2/MultiInheri3.cpp)
add_executable(BankingAccountDivided 09/3/Account.cpp 09/3/Account.h 09/3/NormalAccout.h 09/3/HighCreditAccount.h 09/3/AccountHandler.h 09/3/AccountHandler.cpp  09/3/BankingCommonDecl.h 09/3/BankingSystemMain.cpp)
