cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_FLAGS "-fexec-charset=CP949")

add_executable(untitled main.cpp)

add_executable(main main.cpp)
add_executable(HelloWorld 01/1/HelloWorld.cpp)
add_executable(SimpleAdder 01/1/SimpleAdder.cpp)
add_executable(BetweenAdder 01/1/BetweenAdder.cpp)
add_executable(StringIO 01/1/StringIO.cpp)
add_executable(q1 01/1/q1.cpp)
add_executable(q2 01/1/q2.cpp)
add_executable(q3 01/1/q3.cpp)
add_executable(q4 01/1/q4.cpp)
add_executable(FunctionOverloading 01/2/FunctionOverloading.cpp)
add_executable(Question 01/2/Question.cpp)
add_executable(DefaultValue1 01/3/DefaultValue1.cpp)
add_executable(DefaultAdder2 01/3/DefaultAdder2.cpp)
add_executable(DefaultValue3 01/3/DefaultValue3.cpp)
add_executable(Q1 01/3/Q1.cpp)
add_executable(InlineFunc 01/4/InlineFunc.cpp)
add_executable(Example 01/4/Example.cpp)
add_executable(NameSp1 01/5/NameSp1.cpp)
add_executable(NameSp2 01/5/NameSp2.cpp)
add_executable(NameSp3 01/5/NameSp3.cpp)
add_executable(NameSp4 01/5/NameSp4.cpp)

add_executable(SimpleMain 01/5/01-4/SimpleMain.cpp 01/5/01-4/SimpleFunc.h 01/5/01-4/SimpleFunc.cpp)

add_executable(TrueAndFalse 02/2/TrueAndFalse.cpp)
add_executable(DataTypeBool 02/2/DataTypeBool.cpp)
add_executable(Referen 02/2/Referen.cpp)
add_executable(RefArrElem 02/2/RefArrElem.cpp)
add_executable(RefPtr 02/2/RefPtr.cpp)
add_executable(RefSwap 02/2/RefSwap.cpp)
add_executable(02-1-1 02/2/02-1-1.cpp)
add_executable(02-1-3 02/2/02-1-3.cpp)
add_executable(RefReturnOne 02/2/RefReturnOne.cpp)
add_executable(RefReturnTwo 02/2/RefReturnTwo.cpp)
add_executable(RefReturnThree 02/2/RefReturnThree.cpp)
add_executable(02-2 02/2/02-2.cpp)
add_executable(MemMalFree 02/2/MemMalFree.cpp)
add_executable(NewDelete 02/2/NewDelete.cpp)
add_executable(NewObject 02/2/NewObject.cpp)
add_executable(02-2-3 02/2/02-2-3.cpp)
add_executable(StdCPPFunc 02/2/StdCPPFunc.cpp)
add_executable(02-4-1 02/2/02-4-1.cpp)
add_executable(02-4-2 02/2/02-4-2.cpp)
add_executable(RacingCar 03/1/RacingCar.cpp)
add_executable(RacingCarFuncAdd 03/1/RacingCarFuncAdd.cpp)
add_executable(03-1 03/1/03-1.cpp)
add_executable(RacingCarEnum 03/1/RacingCarEnum.cpp)
add_executable(RacingCarOuterFunc 03/1/RacingCarOuterFunc.cpp)
add_executable(RacingCarClassBase 03/2/RacingCarClassBase.cpp)
add_executable(Car 03/2/Car.cpp 03/2/Car.h 03/2/RacingMain.cpp)
add_executable(CarInline 03/2/CarInline.cpp 03/2/CarInline.h 03/2/RacingInlineMain.cpp)

add_executable(03-2-1 03/2/03-2-1.cpp)
add_executable(03-2-2 03/2/03-2-2.cpp)
add_executable(FruitSaleSim1 03/3/FruitSaleSim1.cpp)
add_executable(RectangleFault 04/1/RectangleFault.cpp)
add_executable(Point 04/1/Point.cpp 04/1/Point.h 04/1/Rectangle.cpp 04/1/RectangleFaultFind.cpp)

add_executable(04-1 04/1/04-1.cpp)
add_executable(Encaps1 04/2/Encaps1.cpp)
add_executable(Encaps2 04/2/Encaps2.cpp)
add_executable(04-2 04/2/04-2.cpp)
add_executable(Constructor1 04/3/Constructor1.cpp)
add_executable(Constructor2 04/3/Constructor2.cpp)
add_executable(FruitSaleSim2 04/3/FruitSaleSim2.cpp)
add_executable(PointRemake 04/3/Point.cpp 04/3/Point.h 04/3/Rectangle.cpp 04/3/Rectangle.h 04/3/RectangleConstructor.cpp)

add_executable(FruitSalesSim3 04/3/FruitSalesSim3.cpp)
add_executable(ReferenceMember 04/3/ReferenceMember.cpp)
add_executable(Destructor 04/3/Destructor.cpp)
add_executable(04-3-1 04/3/04-3-1.cpp)
add_executable(04-3-2 04/3/04-3-2.cpp)
add_executable(ObjArr 04/4/ObjArr.cpp)
add_executable(ObjPtrArr 04/4/ObjPtrArr.cpp)
add_executable(PointerThis 04/4/PointerThis.cpp)
add_executable(UsefulThisPtr 04/4/UsefulThisPtr.cpp)
add_executable(SelfRef 04/4/SelfRef.cpp)
add_executable(BankingSystemVer02 04/5/BankingSystemVer02.cpp)
add_executable(ClassInit 05/1/ClassInit.cpp)
add_executable(ShallowCopyError 05/2/ShallowCopyError.cpp)
add_executable(05-1 05/2/05-1.cpp)
add_executable(PassObjCopycon 05/3/PassObjCopycon.cpp)
add_executable(ReturnObjCopycon 05/3/ReturnObjCopycon.cpp)
add_executable(IKnowTempObj 05/3/IKnowTempObj.cpp)
add_executable(ReturnObjDeadTime 05/3/ReturnObjDeadTime.cpp)
add_executable(BankingSystemVer03 05/3/BankingSystemVer03.cpp)
add_executable(ConstObject 06/1/ConstObject.cpp)
add_executable(ConstOverloading 06/1/ConstOverloading.cpp)
add_executable(MyFriendClass 06/2/MyFriendClass.cpp)
add_executable(MyFriendFunction 06/2/MyFriendFunction.cpp)
add_executable(CComStatic 06/3/CComStatic.cpp)
add_executable(NeedGlobal 06/3/NeedGlobal.cpp)
add_executable(StaticMember 06/3/StaticMember.cpp)
add_executable(PublicStaticMember 06/3/PublicStaticMember.cpp)
add_executable(ConstStaticMember 06/3/ConstStaticMember.cpp)
add_executable(Mutable 06/3/Mutable.cpp)
add_executable(BankingSystemVer04 06/4/BankingSystemVer04.cpp)
add_executable(EmployeeManager1 07/1/EmployeeManager1.cpp)
add_executable(UnivStudentInheri 07/2/UnivStudentInheri.cpp)
add_executable(DerivCreOrder 07/2/DerivCreOrder.cpp)
add_executable(DerivDestOrder 07/2/DerivDestOrder.cpp)
add_executable(DestModel 07/2/DestModel.cpp)
add_executable(07-1-1 07/2/07-1-1.cpp)
add_executable(07-1-2 07/2/07-1-2.cpp)
add_executable(ProtectedHeri 07/3/ProtectedHeri.cpp)
add_executable(ISAInheritance 07/4/ISAInheritance.cpp)
add_executable(HASInheritance 07/4/HASInheritance.cpp)
add_executable(HASComposite 07/4/HASComposite.cpp)
add_executable(07-2-1 07/4/07-2-1.cpp)
add_executable(07-2-2 07/4/07-2-2.cpp)
add_executable(BankingSystemVer05 07/5/BankingSystemVer05.cpp)
add_executable(ObjectPointer 08/1/ObjectPointer.cpp)
add_executable(EmployeeManager2 08/1/EmployeeManager2.cpp)
add_executable(FunctionOverride 08/2/FunctionOverride.cpp)
add_executable(FunctionVirtualOverride 08/2/FunctionVirtualOverride.cpp)
add_executable(EmployeeManager4 08/2/EmployeeManager4.cpp)
add_executable(08-1 08/2/08-1.cpp)
add_executable(VirualDestructor 08/3/VirualDestructor.cpp)
add_executable(ReferenceAttribute 08/3/ReferenceAttribute.cpp)
add_executable(BankingSystemVer06 08/4/BankingSystemVer06.cpp)
add_executable(RealObjUnder1 09/1/RealObjUnder1.cpp)
add_executable(RealObjUnder2 09/1/RealObjUnder2.cpp)
add_executable(VirtualInternal 09/1/VirtualInternal.cpp)
add_executable(MultiInheri1 09/2/MultiInheri1.cpp)
add_executable(MultiInheri2 09/2/MultiInheri2.cpp)
add_executable(MultiInheri3 09/2/MultiInheri3.cpp)
add_executable(BankingAccountDivided 09/3/Account.cpp 09/3/Account.h 09/3/NormalAccout.h 09/3/HighCreditAccount.h 09/3/AccountHandler.h 09/3/AccountHandler.cpp 09/3/BankingCommonDecl.h 09/3/BankingSystemMain.cpp)

add_executable(FirstOperationOverloading 10/1/FirstOperationOverloading.cpp)
add_executable(OverloadingOperation 10/1/OverloadingOperation.cpp)
add_executable(GFunctionOverloading 10/1/GFunctionOverloading.cpp)
add_executable(10-1-1 10/1/10-1.cpp)
add_executable(OneOpndOverloading 10/2/OneOpndOverloading.cpp)
add_executable(10-2 10/2/10-2.cpp)
add_executable(PostOpndOverloading 10/2/PostOpndOverloading.cpp)
add_executable(PointMultipleOperation 10/3/PointMultipleOperation.cpp)
add_executable(CommuMultipleOperation 10/3/CommuMultipleOperation.cpp)
add_executable(ConsoleOutput 10/4/ConsoleOutput.cpp)
add_executable(IterateConsoleOutput 10/4/IterateConsoleOutput.cpp)
add_executable(PointConsoleOutput 10/4/PointConsoleOutput.cpp)
add_executable(10-3 10/4/10-3.cpp)
add_executable(FirstOperationOverloading2 11/1/FirstOperationOverloading2.cpp)
add_executable(AssignShallowCopyError 11/1/AssignShallowCopyError.cpp)
add_executable(InheritAssignOperation 11/1/InheritAssignOperation.cpp)
add_executable(11-1-1 11/1/11-1-1.cpp)
add_executable(11-1-2 11/1/11-1-2.cpp)
add_executable(ImproveInit 11/1/ImproveInit.cpp)
add_executable(ArrayClass 11/2/ArrayClass.cpp)
add_executable(StableConstArrayProb 11/2/StableConstArrayProb.cpp)
add_executable(StableConstArraySolu 11/2/StableConstArraySolu.cpp)
add_executable(StablePointObjArray 11/2/StablePointObjArray.cpp)
add_executable(StablePointPtrArray 11/2/StablePointPtrArray.cpp)
add_executable(11-2-1 11/2/11-2-1.cpp)
add_executable(11-2-2 11/2/11-2-2.cpp)
add_executable(NewDeleteOverloading 11/3/NewDeleteOverloading.cpp)
add_executable(ArrayNewDeleteOverloading 11/3/ArrayNewDeleteOverloading.cpp)
add_executable(PointerOperatorOverloading 11/3/PointerOperatorOverloading.cpp)
add_executable(SmartPointer 11/3/SmartPointer.cpp)
add_executable(Function 11/3/Function.cpp)
add_executable(SortFunctor 11/3/SortFunctor.cpp)
add_executable(ConvToObject 11/3/ConvToObject.cpp)
add_executable(ConvToPrimitive 11/3/ConvToPrimitive.cpp)
add_executable(Account11 11/4/Account.h 11/4/Account.cpp 11/4/AccountHandler.h 11/4/AccountArray.h 11/4/AccountArray.cpp
        11/4/AccountHandler.cpp 11/4/BankingCommonDecl.h 11/4/BankingSystemMain.cpp 11/4/HighCreditAccount.h
        11/4/NormalAccout.h)

add_executable(STDString 12/1/STDString.cpp)
add_executable(StringClass 12/2/StringClass.cpp)
add_executable(Account12 12/3/Account.h 12/3/Account.cpp 12/3/AccountHandler.h 12/3/AccountHandler.cpp
        12/3/AccountArray.cpp 12/3/AccountArray.h 12/3/BankingCommonDecl.h 12/3/BankingSystemMain.cpp
        12/3/HighCreditAccount.h 12/3/NormalAccout.h 12/3/String.h 12/3/String.cpp)
add_executable(AddFunctionTemplate 13/1/AddFunctionTemplate.cpp)
add_executable(TwoTypeAddFunction 13/1/TwoTypeAddFunction.cpp)
add_executable(PrimitiveFunctionTemplate 13/1/PrimitiveFunctionTemplate.cpp)
add_executable(13-1-1 13/1/13-1-1.cpp)
add_executable(13-1-2 13/1/13-1-2.cpp)
add_executable(NeedSpecialFunctionTemplate 13/1/NeedSpecialFunctionTemplate.cpp)
add_executable(SpecialFunctionTemplate 13/1/SpecialFunctionTemplate.cpp)
add_executable(PointClassTemplate 13/2/PointClassTemplate.cpp)
add_executable(PointClassTemplateFuncDel 13/2/PointClassTemplateFuncDel.cpp)
add_executable(PointMain13 13/2/PointMain.cpp 13/2/PointTemplate.cpp 13/2/PointTemplate.h)
add_executable(Point132 13/2/Point.h 13/2/Point.cpp 13/2/BoundArrayMain.cpp 13/2/ArrayTemplate.h)
add_executable(13-2 13/2/13-2.cpp)
add_executable(13-3 13/3/Account.cpp 13/3/Account.h
        13/3/AccountHandler.cpp 13/3/AccountHandler.h 13/3/BankingSystemMain.cpp 13/3/BankingCommonDecl.h
        13/3/BoundCheckArray.h 13/3/HighCreditAccount.h 13/3/NormalAccout.h 13/3/String.cpp
        13/3/String.h)
add_executable(BoundArrayMain 14/1/BoundArrayMain.cpp 14/1/ArrayTemplate.h 14/1/BoundArrayMain.cpp)
add_executable(PointTemplateFriendFunction 14/1/PointTemplateFriendFunction.cpp)
add_executable(ClassTemplateSpecialization 14/2/ClassTemplateSpecialization.cpp)
add_executable(ClassTemplatePartialSpecialization 14/2/ClassTemplatePartialSpecialization.cpp)
add_executable(NonTypeTemplateParam 14/3/NonTypeTemplateParam.cpp)
add_executable(TemplateParamDefaultValue 14/3/TemplateParamDefaultValue.cpp)
add_executable(FunctionTemplateStaticVar 14/4/FunctionTemplateStaticVar.cpp)
add_executable(ClassTemplateStaticMem 14/4/ClassTemplateStaticMem.cpp)
add_executable(UnhandlingException 15/1/UnhandlingException.cpp)
add_executable(HandlingExceptionUseIf 15/1/HandlingExceptionUseIf.cpp)
add_executable(HandlingExceptionTryCatch 15/2/HandlingExceptionTryCatch.cpp)
add_executable(PassException 15/3/PassException.cpp)
add_executable(DiffHandlingPosition 15/3/DiffHandlingPosition.cpp)
add_executable(StackUnwinding 15/3/StackUnwinding.cpp)
add_executable(CatchList 15/3/CatchList.cpp)
add_executable(ATMSim 15/4/ATMSim.cpp)
add_executable(ATMSim2 15/4/ATMSim2.cpp)
add_executable(CatchFlow 15/4/CatchFlow.cpp)
add_executable(BadAlloc 15/5/BadAlloc.cpp)
add_executable(ReThrow 15/5/ReThrow.cpp)
add_executable(BankingSystemmain15 15/6/Account.cpp 15/6/Account.h 15/6/AccountException.h 15/6/AccountHandler.cpp
        15/6/AccountHandler.h 15/6/BankingCommonDecl.h 15/6/BankingSystemMain.cpp 15/6/BoundCheckArray.h
        15/6/HighCreditAccount.h 15/6/NormalAccount.h 15/6/String.cpp 15/6/String.h)
add_executable(PowerfullCasting 16/1/PowerfullCasting.cpp)
add_executable(DynamicCasting 16/1/DynamicCasting.cpp)
add_executable(StaticCasting 16/1/StaticCasting.cpp)
add_executable(ConstCasting 16/1/ConstCasting.cpp)
add_executable(ReinterpretCasting 16/1/ReinterpretCasting.cpp)
add_executable(PolymorphicDynamicCasting 16/1/PolymorphicDynamicCasting.cpp)
add_executable(PolymorphicStableCasting 16/1/PolymorphicStableCasting.cpp)
add_executable(DynamicBadCastRef 16/1/DynamicBadCastRef.cpp)